--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 [dependencies]
 bevy = "0.14.1"
 blenvy = "0.1.0-alpha.1"
-rand = "0.8.5"  # Ensure you're using the latest version of Bevy
+rand = "0.8.5"
+log = "0.4.22"  # Ensure you're using the latest version of Bevy
